--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<header class="fixed top-0 w-full bg-black/20 backdrop-blur-md z-50 border-b border-white/10">
 		<div class="container mx-auto px-4 py-4">
 			<div class="flex items-center justify-between">
-				<div class="flex items-center space-x-2">
+				<a href="https://wirecoder.netlify.app/" class="flex items-center space-x-2">
 					<div class="w-10 h-10 bg-gradient-to-r from-cyan-400 to-purple-500 rounded-lg flex items-center justify-center">
 						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
 							stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -34,9 +34,9 @@
 						</svg>
 					</div>
 					<span class="text-2xl font-bold text-white">Wirecoder</span>
-				</div>
+				</a>
 				<nav class="hidden md:flex items-center space-x-8">
-					<a class="text-white hover:text-cyan-400 transition-colors" href="#home">Home</a>
+					<a class="text-white hover:text-cyan-400 transition-colors" href="https://wirecoder.netlify.app/">Home</a>
 					<a class="text-white hover:text-cyan-400 transition-colors" href="#services">Services</a>
 					<a class="text-white hover:text-cyan-400 transition-colors" href="#about">About</a>
 					<a class="text-white hover:text-cyan-400 transition-colors" href="#projects">Projects</a>
